<resources>
    <string name="app_name">悦运酷商家版</string>
    <string name="register">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="edt_pwd">请输入密码</string>
    <string name="edt_phone">请输入手机号</string>
    <string name="edt_set_pwd">请设置密码</string>
    <string name="edt_confirm_pwd">请确认密码</string>
    <string name="edt_verification_code">请输入验证码</string>
    <string name="btn_acq_code">获取短信验证码</string>
    <string name="tv_login"><u>登录</u></string>
    <string name="btn_register_business">商家注册</string>
    <string name="send">发送</string>
    <string name="error_password">密码不合法，必须是3到20位的数字</string>
    <string name="error_confirmpassword">确认密码与原密码不一致</string>
    <string name="registering">正在注册...</string>
    <string name="error_not_phonenumber">该号码为非手机号</string>
    <string name="success_sendmsg">成功发送验证码</string>
    <string name="successed_register">注册成功</string>
    <string name="failed_register">注册失败</string>
    <string name="failed_login">登录失败</string>
    <string name="success_login">登录成功</string>
    <string name="logining">正在登录....</string>
    <string name="my_activity">活动</string>
    <string name="fabu">发布</string>
    <string name="activity_fabu">发布活动</string>
    <string name="xuanchuan_huodong">活动宣传图</string>
    <string name="hint_name_huodong">九九重阳,为你奔跑</string>
    <string name="hint_jiancheng_huodong">活动简介</string>
    <string name="hint_time_begin">开始时间</string>
    <string name="hint_time_end">结束时间</string>
    <string name="hint_rule_activity">活动规则</string>
    <string name="hint_remark_activity">活动备注</string>
    <string name="tv_name_huodong">活动名称</string>
    <string name="tv_jiancheng_huodong">活动简介</string>
    <string name="tv_danwei_huodong">活动发布单位</string>
    <string name="hint_danwei_huodong">悦动健身中心</string>
    <string name="tv_time_activity">活动时间</string>
    <string name="tv_rule_activity">活动规则</string>
    <string name="tv_jiangli_activity">活动奖励</string>
    <string name="hint_button_off">关闭按钮将不设置奖励</string>
    <string name="tv_jiangpin">奖品</string>
    <string name="hint_miandanquan">免单卷</string>
    <string name="tv_jiangpinshuliang">奖品数量</string>
    <string name="tv_time_kaijiang">开奖时间</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="center_person">个人中心</string>
    <string name="click_login">点击登录</string>
    <string name="phone_contact">联系电话:</string>
    <string name="succ_logout">退出登录成功</string>
    <string name="tv_cansee_login">登录后才可以查看</string>
    <string name="commit">完成</string>
    <string name="name_vendor">场馆名称</string>
    <string name="name_user">用户名</string>
    <string name="phone_user">联系电话</string>
    <string name="address_place">场馆地址</string>
    <string name="loading">正在加载.....</string>
    <string name="failed_load">加载失败</string>
    <string name="china">中国</string>
    <string name="jianjie">简介:</string>
    <string name="input_jianjie">输入简介</string>
    <string name="tv_place_sport">运动场地</string>
    <string name="tv_jiage">价格</string>
    <string name="tv_num">数量</string>
    <string name="tv_place_basketball">篮球场</string>
    <string name="tv_jiage_each_hour">元/小时</string>
    <string name="tv_place_volleyball">排球场</string>
    <string name="tv_place_tennis">羽毛球场</string>
    <string name="tv_place_pingpong">乒乓球场</string>
    <string name="tv_place_football">足球场</string>
    <string name="tv_place_badminton">网球场</string>
    <string name="tv_place_yoga">瑜伽场</string>
    <string name="update_info_place">场馆信息修改</string>
    <string name="failed_upload">上传图片失败</string>
    <string name="error_unit">发布单位的内容不能为空</string>
    <string name="error_name">活动名称的内容不能为空</string>
    <string name="error_intro">活动简介的内容不能为空</string>
    <string name="fail_publish">发布失败</string>
    <string name="succ_publish">发布成功</string>
    <string name="publishing">正在发布....</string>
    <string name="queryFail">查询失败</string>
    <string name="error_beginTime">你还未选择开始时间</string>
    <string name="error_endTime">你还未选择结束时间</string>
    <string name="error_rule">活动规则的内容不能为空</string>
    <string name="error_typeJiangping">奖品类型的内容不能为空</string>
    <string name="error_jiangpingNum">奖品的数量不能为空</string>
    <string name="error_kaijiangTime">开奖时间的内容不能为空</string>
    <string name="fail_beginTime">开始时间不能小于当前时间</string>
    <string name="fail_endTime">结束时间不能小于开始时间</string>
    <string name="fail_kaijiangTime">开奖时间必须在活动时间范围内</string>
    <string name="look_dingdan_hadover">已结束订单查看</string>
    <string name="look_dingdan_nodo">未处理订单查看</string>
    <string name="look_dingdan_doing">正在进行订单查看</string>
    <string name="Fail_loadMore">加载更多失败</string>
    <string name="data_empty">空空如也！</string>
    <string name="data_end">数据加载已经到底了!</string>
    <string name="notBusiness">不是商家用户</string>
    <string name="delete">删除</string>
    <string name="pic_select_not">你还未选择图片</string>
    <string name="edt_set_new_pwd">请设置新密码</string>
    <string name="btn_reset_pwd">重置密码</string>
    <string name="pwd_reset">重置密码</string>
    <string name="reseting">正在重置....</string>
    <string name="reset_pwd_succ">重置密码成功</string>
    <string name="reset_pwd_fail">重置密码失败，原因:</string>
    <string name="code_error">你还没填验证码</string>
</resources>
