<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_place_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdcp.yueyunku_business.ui.activity.UpdatePlaceInfoActivity">

    <include layout="@layout/toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_diver"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_place"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/loadingimg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jianjie"></TextView>

                <EditText
                    android:id="@+id/edt_info_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/input_jianjie" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tv_place_sport" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_basketball"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_basketball" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>

            <!--排球场-->
            <RelativeLayout
                android:id="@+id/relativeLayout_volleyball"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_volleyball" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>
            <!--tennis-->
            <RelativeLayout
                android:id="@+id/relativeLayout_tennis"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_tennis" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>
            <!--pingpong-->
            <RelativeLayout
                android:id="@+id/relativeLayout_pingpong"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_pingpong" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>
            <!--football-->


            <RelativeLayout
                android:id="@+id/relativeLayout_football"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_football" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>
            <!--badminton-->
            <RelativeLayout
                android:id="@+id/relativeLayout_badminton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_badminton" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>

            <!--yoga-->
            <RelativeLayout
                android:id="@+id/relativeLayout_yoga"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#fff">
                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/tv_place_yoga" />
                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/go"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
